@@ -1,17 +1,23 @@
 #include <random>
 
-class Dice
+class dice
 {
-public:
-    Dice(int sides) : sides(sides), generator(std::random_device()()) {}
-
-    int roll()
-    {
-        std::uniform_int_distribution<int> distribution(1, sides);
-        return distribution(generator);
-    }
-
 private:
+    int base;
+    int number;
     int sides;
-    std::mt19937 generator;
+
+public:
+    dice() : base(0), number(0), sides(0) {}
+    dice(int base, int number, int sides) : base(base), number(number), sides(sides) {}
+
+    void set_dice(int base, int number, int sides)
+    {
+        this->base = base;
+        this->number = number;
+        this->sides = sides;
+    }
+    int get_base() { return base; }
+    int get_number() { return number; }
+    int get_sides() { return sides; }
 };
