@@ -1,2 +1,3 @@
 4/03/25 6:10: Beginning work on 1.06
 4/03/25 6:10: Added class monsterinfo
+4/03/25 6:30: working on parse method
